--- a/README
+++ b/README
@@ -25,12 +25,12 @@ REPOSITORY
     <https://github.com/tupinek/App-CPAN-Search>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2015 Michal Špaček
+     © 2015 Michal Josef Špaček
      BSD 2-Clause License
 
 VERSION
