--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
  - Remove trivial comments.
  - Update Module::Install to 1.18 version.
  - Update author name.
+ - Update copyright years.
 
 0.01 2015-12-30T23:26:24+01:00
  - First version.
