Update copyright years

--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.04
  - Update author github username.
+ - Update copyright years.
 
 0.03 2018-02-07T08:08:26+01:00
  - Update Module::Install to 1.19 version.
