Remove unused class

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
  - Add test for constructor.
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Move argument parsing from constructor to run section.
+ - Remove unused class.
  - Update author github username.
  - Update copyright years.
 
