Update copyright years

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
  - Add test for help.
  - Fix minimal version of Perl.
  - Improve help in tool.
+ - Update copyright years.
 
 0.05 2021-01-26T11:13:40+01:00
  - Change bugtracker.
