--- a/TODO
+++ b/TODO
@@ -10,7 +10,8 @@ Blocked by testing of remote call.
 3. Vypsat jenom ty, ktere jsou nainstalovane.
 4. Kdyz jsem mimo sitove spojeni, ale mam cache, tak ted to nefunguje.
 Prepinac pro nestahovani cache.
-5.
+5. Add support for order by release date.
+6.
 
 Applied
 =======
